--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ pylint = "*"
 [packages]
 django = "*"
 djangorestframework = "*"
+gunicorn = "*"
+django-heroku = "*"
 
 [requires]
 python_version = "3.8"
