Fix dependencies for cors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\cbmol\\.virtualenvs\\headcount-server-Y3SW_gfv\\Scripts\\python.exe",
+    "python.pythonPath": "C:\\Users\\Carson\\.virtualenvs\\django-test-JUVag0yZ\\Scripts\\python.exe",
     "python.linting.pylintEnabled": true,
     "python.linting.pylintPath": "C:\\Python38\\Lib\\site-packages",
     "python.linting.enabled": true
