Added gitignore and added postgres dependencies to piplock

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ djangorestframework = "*"
 gunicorn = "*"
 django-heroku = "*"
 django-cors-headers = "*"
+dj-database-url = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.8"
