--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ django-heroku = "*"
 django-cors-headers = "*"
 dj-database-url = "*"
 psycopg2 = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
