Basic authentication with JWT tokens

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ django-cors-headers = "*"
 dj-database-url = "*"
 psycopg2 = "*"
 python-dotenv = "*"
+djangorestframework-jwt = "*"
 
 [requires]
 python_version = "3.8"
